# backend

./: .gitignore  README.md  main.py  patch_note.py  pyproject.toml  utils.py
api/: api_hospital.py  hospital_api.py  insert_api.py
app/: main.py
app/api/: disease_api.py  hospital_api.py  insert_api.py  medicine_api.py
app/models/: database.py
backup_tool/: dump_list.sh  dump_local.sh  dump_server.sh  restore_local.sh  restore_server.sh
code/crawling/: clean_medi_term.py  craw_medi_term.py
code/crawling/amc/: step1_get_content_ids.py  step2_parse_diseases.py  step3_clean_and_format.py  step3_clean_check.py  v2_amc_craw.py
code/crawling/snuh/: v2_snuh_craw.py
code/disease/: disease_token.py
code/disease/disease_vector/: create_tfidf_vectors.py  verify_vectors.py
code/hospital/: failed_hospital_kakao_api.py  hospital_kakao_api.py  without_military.py
code/medic/: call_hospital_api.py  call_medicine_api.py  clean_medicine.py  medicine_analysis.py  medicine_analysis_upgrade.py
pages/: 1_disease.py  2_hospital.py  2_hospital_cp.py  2_medicine.py  3_hospital.py  3_medicine.py  _utils.py
postgres/: docker-compose.yml
postgres/db_code/: asan_dis_import.py  dis_import.py  dis_out.py  hyun_dis_import.py  jacob_dis_import.py  jiwon_dis_import.py  seoul_dis_import.py
postgres/db_data/: dis_prototype.xlsx
postgres/dis_hangul/dis_code/: dis_hangul.py
postgres/init/: init.sql
